examples/errors/unknown_instruction.pigsh
# 错误：未知指令
foo bar baz
